# nes-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  GAMEPAD_SETUP.md  emulator_config.toml  input_config.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: address-review.md  impl.md
.github/workflows/: ci.yml  coverage.yml
benches/: cpu_bench.rs  ppu_bench.rs
examples/: audio_test.rs  debug_example.rs  debug_rom.rs  display_ppu_integration.rs  emulator_features.rs  rom_info.rs  run_game.rs
src/: bus.rs  input.rs  lib.rs  main.rs  ram.rs
src/apu/: constants.rs  mod.rs
src/apu/channels/: dmc.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/apu/components/: envelope.rs  frame_counter.rs  length_counter.rs  linear_counter.rs  mod.rs  sweep.rs  timer.rs
src/apu/tests/: frame_counter_tests.rs  init_tests.rs  mod.rs  pulse_tests.rs  triangle_tests.rs
src/audio/: mixer.rs  mod.rs  output.rs  resampler.rs
src/cartridge/: mod.rs
src/cartridge/mappers/: mapper0.rs  mapper1.rs  mapper10.rs  mapper11.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper66.rs  mapper7.rs  mapper9.rs  mod.rs
src/cpu/: addressing.rs  execute.rs  instructions.rs  mod.rs  opcodes.rs
src/cpu/instructions/: arithmetic.rs  branch.rs  compare.rs  flags.rs  jump_subroutine.rs  load_store.rs  logic.rs  miscellaneous.rs  mod.rs  shift_rotate.rs  stack.rs  transfer.rs
src/debug/: README.md  cpu.rs  disassembler.rs  execution_log.rs  logger.rs  memory.rs  mod.rs  ppu.rs  ui.rs
src/debug/ui/: cpu_panel.rs  disasm_panel.rs  execution_control_panel.rs  log_panel.rs  memory_panel.rs  mod.rs
src/debug/ui/ppu_panel/: mod.rs  nametable.rs  palette.rs  pattern.rs
src/display/: framebuffer.rs  integration.rs  mod.rs  palette.rs  window.rs
src/emulator/: config.rs  mod.rs  recent_roms.rs  save_state.rs  screenshot.rs
src/input/: config.rs  gamepad.rs  keyboard.rs  unified.rs
src/ppu/: constants.rs  memory.rs  mod.rs  registers.rs  rendering.rs
src/ppu/tests/: memory.rs  mod.rs  quirks.rs  registers.rs  rendering.rs  timing.rs
tests/: README.md  TEST_STATUS.md  blargg_apu_tests.rs  blargg_cpu_tests.rs  blargg_ppu_tests.rs  functionality_test.rs  nes_instr_tests.rs  nestest.rs  run_all_tests.sh  sprite_tests.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
