[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "nes-rs"
version = "0.1.0"
edition = "2021"
authors = ["itsakeyfut"]
description = "A NES emulator written in Rust"
license = "MIT"

[dependencies]
winit = "0.30"
pixels = "0.15"
gilrs = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
png = "0.18"
chrono = "0.4.42"
cpal = { version = "0.16", optional = true }
egui = "0.33.2"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
wgpu = "27.0.1"

[features]
default = ["audio"]
audio = ["dep:cpal"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[lib]
name = "nes_rs"
path = "src/lib.rs"

[[bin]]
name = "nes-rs"
path = "src/main.rs"

[[example]]
name = "audio_test"
required-features = ["audio"]

[[bench]]
name = "cpu_bench"
harness = false

[[bench]]
name = "ppu_bench"
harness = false

# Profile for development builds
[profile.dev]
opt-level = 0          # No optimization for faster compile times
debug = true           # Full debug info
debug-assertions = true # Enable debug assertions
overflow-checks = true  # Enable overflow checks
lto = false            # No Link Time Optimization
panic = 'unwind'       # Unwind on panic for better debugging
incremental = true     # Enable incremental compilation
codegen-units = 256    # More units for faster parallel compilation

# Profile for release builds
[profile.release]
opt-level = 3          # Maximum optimization
debug = false          # No debug info
debug-assertions = false # Disable debug assertions
overflow-checks = false # Disable overflow checks for performance
lto = "fat"            # Full Link Time Optimization
panic = 'abort'        # Abort on panic (smaller binary)
incremental = false    # No incremental for release
codegen-units = 1      # Single unit for better optimization
strip = true           # Strip symbols for smaller binary

# Profile for benchmarking and profiling
[profile.bench]
inherits = "release"
debug = true           # Keep debug info for profiling tools
strip = false          # Don't strip symbols for profiling
